# se-toolkit-lab-7

./: README.md  docker-compose.yml
backend/: Dockerfile
bot/: .env.bot.example  Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  command.py  intent_router.py
bot/services/: __init__.py  llm_client.py  lms_client.py
