[project]
name = "lms-bot"
version = "0.1.0"
description = "Telegram bot for Learning Management System"
requires-python = "==3.14.2"
dependencies = [
  "aiogram==3.26.0",
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "python-dotenv==1.2.1",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio>=0.25.0",
  "ruff==0.14.14",
]
